@@ -2,6 +2,7 @@
 
 * Quick search now supports airlines
 * Airline filter can now be used for airport route maps
+* Distances can be shown in mi or km
 * Statsbox not shown in route map mode
 
 <b>2009-07-02</b>
